<resources>
    <string name="app_name">MathLogic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Learning</string>
    <string name="theme1">Тема 1. Составные части</string>
    <string name="theme2">Тема 2. Атомарные и составные формулы</string>
    <string name="theme3">Тема 3. Значение</string>
    <string name="theme4">Тема 4. </string>
    <string name="theory"><b>Теория</b></string>
    <string name="test"><b>Задания</b></string>
    <string name="check">Проверить ответы</string>
    <string name="answer">Напишите ответ:</string>
    <string name="quest1.1">\t1. Переведите высказывание в атомарную формулу: "Луна вращается вокруг земли."</string>
    <string name="quest1.2">\t2. Выберите правильный вариант НЕ подходящий к высказыванию "Kdc"</string>
    <string name="quest2.1">\t1. Комары летают, и некоторые лягушки едят их</string>
    <string name="quest2.2">\t2. Воробьи либо летают, либо прыгают</string>
    <string name="quest2.3">\t3. Летающие животные — это птицы</string>
    <string name="quest2.4">\t4. "∀x(Tx→Sx)":</string>
    <string name="quest2.5">\t5. "∃x(Mx&amp;!Hx)":</string>
    <string name="quest2.6">\t6. "∀x(Hx→Px||Gx)":</string>
    <string name="main">    Сегодня логика - это и отрасль математики, и отрасль философии. В большинстве крупных университетов оба факультета предлагают курсы по логике,
        и обычно они во многом пересекаются. С философской точки зрения логика, по крайней мере, тесно связана с изучением правильных рассуждений. Рассуждение - это эпистемическая,
        умственная деятельность. Поэтому логика, по крайней мере, тесно связана с эпистемологией. Логика также является центральной отраслью информатики,
        отчасти из-за интересных вычислительных отношений в логических системах, а отчасти из-за тесной связи между формальной дедуктивной аргументацией и рассуждениями.</string>

    <string name="theory1.1"><center>\tДля обозначения конкретного предмета таких как Рим, луна, солнце. Используются первые строчные буквы латинского алфавита, с числовыми индексами или без них, они называются константы: \n
    <b>a, b, b<sub><small>10</small></sub>, c, d<sup><small>1</small></sup>,…</b></center></string>

    <string name="theory1.2"><center>\tДля обозначения нескольких предметов, таких как города или небесные тела используются последние строчные буквы латинского алфавита, с числовыми индексами или без них, они называются переменными:\n
    <b>w,x,y<sub><small>1</small></sub>,z,z<sup><small>9</small></sup>,..</b></center></string>
    <string name="theory1.3"><center> \tДля обозначения свойства переменной или константы используются прописные буквы латинского алфавита, с числовыми индексами или без них, они называются предикаты:\n
    <b>A<sub><small>7</small></sub>, B<sup><small>4</small></sup>, M,..</b>\n
        \tНапример “Рим большой” можно записать как <b>Hd</b>, где <b>H</b> это “x большой”, а <b>d</b> это Рим. Предикаты могут принимать больше одной константы или переменой например “Рим больше других городов”, можно записать как <b>Jay</b>, где <b>J</b> это “x больше z”, <b>a</b> это Рим, <b>y</b> это города.\n</center></string>
    <string name="title_activity_theme2">Theme2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="theory2"><center>\t<b>Атомарные формулы.</b>\n
    \t<b>Hd, Jay, A</b> это атомарные формулы из них можно сделать составные формулы.\n
    \t<b>Составные формулы.</b>\n
    \tДля составления формул используются эти символы: \n
    \t<b>1.! -</b> символ отрицания. Например, отрицание\n <b>Ba</b> это <b>!Ba.</b> \n
    \t<b>2. &amp; - </b>логическое <b>И</b>. Например: \n
    Луна не прыгает и кот пушистый это\n <b>!Ja &amp; Mx.</b> \n
    \t3.<b>|| -</b> логическое <b>ИЛИ</b>. Например: \n
    Луна не прыгает или кот пушистый это\n <b>!Ja || Mx.</b> \n
    \t<b>4. → -</b> символ следования. Например: \n
    Если комар маленький, то лёд холодный это\n <b>Mx → Ca</b> \n
    \t<b>5.∀ -</b> квантор всеобщности. Например: \n
    Все комары летают это\n <b>∀x(Hx)</b>, где <b>∀x</b> это все комары, а <b>Hx</b> это комар летает, а <b>()</b> указывают область, где <b>x</b> это <b>∀x.</b> \n
    \t<b>6. ∃ -</b> квантор существования. Например: \n
    \tСуществуют летающие комары, некоторые комары летают и т.д. – это <b>∃x(Hx).</b> \n \n
    Все формулы выглядят примерно так: <b>\n∀x∃y(Hx||(Dy&amp;Ja)).</b> Кванторы используются только для переменных. Скобки, как и в алгебре показывают приоритет операций.</center>
</string>

    <string name="theory3.1">\tЛюбые формулы как атомарные, так и составные имеют свое значение. Это значение истинности и ложности (дальше 1 и 0) так, как логика — это формальный язык, из структуры любой формулы мы можем узнать все возможные комбинации значений. \n
\tЗначение атомарной формулы меняет на противоположное оператор <b>- !</b>
</string>
    <string name="theory3.2">\tЗначение составной формулы зависит от значения формулы атомарной:</string>
    <string name="theory3.3">\tСоставные формулы делятся на три типа:\n
\t1. <b>Тавтологии</b> – при любых значениях переменных(атомарных или других составных формул(подформул)) имеют значение 1.\n
\t2. <b>Выполнимые</b> – есть значения переменных, при которых имеют значение 1.\n
\t3. <b>Противоречивые</b> – при любых значениях переменных имеют значение 0.\n
Но далеко не всегда можно просчитать все возможные комбинации. Например, в формулах с большим количеством атомарных формул или большим количеством подформул при использовании таблицы значений мы потратим слишком много времени. В таком случае используются другие методы, например доказательство от противного.\n
При доказательстве от противного предполагается, что формула имеет значение 0 исходя из этого выясняется значение подформул, в итоге вы выясняете при каких значениях переменных формула имеет значение 0 или приходите к противоречию(в этом случае формула тавтологична).
</string>
</resources>