<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Theme1Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="374dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:foreground="@android:drawable/ic_menu_sort_by_size"
                android:foregroundGravity="left"
                android:foregroundTint="@color/teal_700"
                android:freezesText="false"
                android:gravity="center"
                android:text="@string/theory"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.396"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="17dp"
                android:text="@string/theory1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.192"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="375dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:foreground="@android:drawable/ic_menu_sort_by_size"
                android:foregroundGravity="left"
                android:foregroundTint="#02CAB0"
                android:gravity="center"
                android:text="@string/test"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.396"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="17dp"
                android:text="@string/quest1.1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/answer" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="230dp"
                android:layout_height="39dp"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="17dp"
                android:text="@string/quest1.2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rg">

            <RadioButton
                android:id="@+id/radioButton"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="17dp"
                android:text="Европа спутник Юпитера"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="17dp"
                android:text="Рим находится в Италии" />

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="17dp"
                android:text="Слон больше белки" />

            <Button
                android:id="@+id/check1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:text="@string/check"
                android:onClick="onClickCheck1"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>